# uuid-vs-auto-inc-test

./: Makefile  README.md  pyproject.toml
uuid_vs_auto_inc_test/: main.py
