[tool.poetry]
name = "uuid-vs-auto-inc-test"
version = "0.1.0"
description = ""
authors = ["Ross Gray <rossagray@gmail.com>"]
readme = "README.md"
packages = [{include = "uuid_vs_auto_inc_test"}]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
sqlalchemy = "^2.0.13"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
